# Snoonu

./: .env.example  README.md  main.py  pyproject.toml
dashboard/: index.html
src/: extract_menu.py  voice_assistant.py
src/api/: main.py
src/api/routes/: extract.py  livekit.py
