[project]
name = "snoonu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datalab-python-sdk>=0.2.1",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.128.0",
    "langchain>=1.2.4",
    "langchain-groq>=1.1.1",
    "livekit-agents[cartesia,deepgram,openai,silero,turn-detector]~=1.0",
    "livekit-api>=1.1.0",
    "livekit-plugins-groq>=1.3.11",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]
